src/objects/CBL2_Lot__c.object
<CustomObject>
    <fields>
        <fullName>Farm__c</fullName>
        <label>Farm</label>
        <referenceTo>CBL2_Farm__c</referenceTo>
        <relationshipLabel>CBL2_Lots_Farm</relationshipLabel>
        <relationshipName>CBL2_Lots_Farm</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Lot_Age_years__c</fullName>
        <formula>(TODAY() - lotPlantingDate__c )/365.2425</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lot Age (years)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lot_Code_Guat__c</fullName>
        <label>Lot Code Guat</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lot_Latitude__c</fullName>
        <label>Lot Latitude</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lot_Longitude__c</fullName>
        <label>Lot Longitude</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lot_area_Ha__c</fullName>
        <formula>IF(text( lotAreaUnits__c ) = &quot;Cuadra&quot;, lotArea__c *1.5625, 
IF(text( lotAreaUnits__c ) = &quot;Manzanas&quot;, lotArea__c *0.6988, 
IF(text( lotAreaUnits__c )=&quot;Cuerdas (25x25)&quot;, lotArea__c *22.89, 
IF(text( lotAreaUnits__c )=&quot;Cuerdas (40x40)&quot;, lotArea__c *8.94, lotArea__c ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lot area (Ha)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>CBL2_Lots_Submission</relationshipLabel>
        <relationshipName>CBL2_Lots_Submission</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lotAreaUnits__c</fullName>
        <label>lotAreaUnits</label>
        <picklist>
            <picklistValues>
                <fullName>Hectáreas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manzana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas (25x25)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas (40x40)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuadra</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>lotArea__c</fullName>
        <label>lotArea</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lotCode__c</fullName>
        <label>lotCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lotCoffeeVariety__c</fullName>
        <label>lotCoffeeVariety</label>
        <picklist>
            <picklistValues>
                <fullName>Blue Mountain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bourbon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Castillo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catimor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catuai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catuai 44</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caturra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garnica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geisha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Icatu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jackson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lempira</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maragogipe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mondo Novo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montecristo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N39</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacamara</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pache</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pache Colis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ruiru11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sarchimor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sumatra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tabi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tekisisc</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>lotName__c</fullName>
        <label>lotName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lotNumberOfPlants__c</fullName>
        <label>lotNumberOfPlants</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lotPlantingDate__c</fullName>
        <label>lotPlantingDate</label>
        <type>Date</type>
    </fields>
    <label>CBL2_Lot</label>
    <nameField>
        <displayFormat>LT-{0000000}</displayFormat>
        <label>CBL2_Lot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CBL2_Lots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>